# femtoGPT

./: Cargo.toml  DEVELOPMENT_CHECKLIST.md  PRD.md  README.md
benches/: flash_attention_benchmark.rs  tensor_ops.rs  training_benchmark.rs
src/: gpt.rs
src/funcs/: flash_attention.rs  mod.rs  standard_attention.rs
tests/common/: mod.rs
tests/unit/: flash_attention_tests.rs  function_tests.rs  tensor_tests.rs
