[package]
name = "femto-gpt"
version = "0.2.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2021"
description = "Minimal Rust library for training GPT language-models"
repository = "https://github.com/keyvank/femtoGPT"
homepage = "https://github.com/keyvank/femtoGPT"
license = "MIT"


[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.7.0"
thiserror = "1.0"
ocl = { version = "0.19", optional = true }
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[features]
gpu = ["ocl"]

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "training_benchmark"
harness = false

[[bench]]
name = "flash_attention_benchmark"
harness = false
